# ScreenTimeSquad

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ScreenTimeApp  ScreenTimeSquad
src/: UserSession.h  algorithms.cpp  algorithms.h  cli.cpp  cli.h  data_parser.cpp  data_parser.h  lsapp.tsv  main.cpp
